Blog scrollbar styling fix

--- a/src/styles/blogs.scss
+++ b/src/styles/blogs.scss
@@ -10,6 +10,8 @@
   overflow-x: hidden;
   overflow-y: auto;
   background-color: rgba(255, 255, 255, 0.75);
+
+  @include window-scrollbar();
 }
 
 .window--maximized {
