--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -23,6 +23,54 @@ $icon-dotted-color: #98a632;
 $gameboy-tile-color: #272820;
 $gameboy-screen-color: #727e00;
 
+@mixin window-scrollbar {
+  &::-webkit-scrollbar {
+    background-color: #DDD;
+    width: 20px;
+    cursor: pointer;
+  }
+
+  &::-webkit-scrollbar-button {
+    height: 20px;
+    width: 20px;
+    background-color: $window-base-color;
+    border-top: 2px solid rgba(255, 255, 255, 0.8);
+    border-left: 2px solid rgba(255, 255, 255, 0.8);
+    border-bottom: 2px solid rgba(0, 0, 0, 0.8);
+    border-right: 2px solid rgba(0, 0, 0, 0.8);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center center;
+  }
+
+  &::-webkit-scrollbar-button:start:decrement,
+  &::-webkit-scrollbar-button:end:increment {
+    display: block;
+  }
+
+  &::-webkit-scrollbar-button:vertical:start:increment,
+  &::-webkit-scrollbar-button:vertical:end:decrement {
+    display: none;
+  }
+
+  /* Place The scroll up button at the up */
+  &::-webkit-scrollbar-button:vertical:decrement {
+    background-image: url(/images/up-arrow-icon.png);
+  }
+
+  &::-webkit-scrollbar-button:vertical:increment {
+    background-image: url(/images/down-arrow-icon.png);
+  }
+
+  &::-webkit-scrollbar-thumb {
+    border-top: 2px solid rgba(255, 255, 255, 0.8);
+    border-left: 2px solid rgba(255, 255, 255, 0.8);
+    border-bottom: 2px solid rgba(0, 0, 0, 0.8);
+    border-right: 2px solid rgba(0, 0, 0, 0.8);
+    background-color: $window-base-color;
+  }
+}
+
 @font-face{
   font-family: "Digital";
   src: url(/fonts/digital.ttf);
@@ -50,52 +98,6 @@ body {
   height: 100vh;
   width: 100vw;
   overflow: hidden;
-}
-
-::-webkit-scrollbar {
-  background-color: #DDD;
-  width: 20px;
-  cursor: pointer;
-}
-
-::-webkit-scrollbar-button {
-  height: 20px;
-  width: 20px;
-  background-color: $window-base-color;
-  border-top: 2px solid rgba(255, 255, 255, 0.8);
-  border-left: 2px solid rgba(255, 255, 255, 0.8);
-  border-bottom: 2px solid rgba(0, 0, 0, 0.8);
-  border-right: 2px solid rgba(0, 0, 0, 0.8);
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center center;
-}
-
-::-webkit-scrollbar-button:start:decrement,
-::-webkit-scrollbar-button:end:increment {
-  display: block;
-}
-
-::-webkit-scrollbar-button:vertical:start:increment,
-::-webkit-scrollbar-button:vertical:end:decrement {
-  display: none;
-}
-
-/* Place The scroll up button at the up */
-::-webkit-scrollbar-button:vertical:decrement {
-  background-image: url(/images/up-arrow-icon.png);
-}
-
-::-webkit-scrollbar-button:vertical:increment {
-  background-image: url(/images/down-arrow-icon.png);
-}
-
-::-webkit-scrollbar-thumb {
-  border-top: 2px solid rgba(255, 255, 255, 0.8);
-  border-left: 2px solid rgba(255, 255, 255, 0.8);
-  border-bottom: 2px solid rgba(0, 0, 0, 0.8);
-  border-right: 2px solid rgba(0, 0, 0, 0.8);
-  background-color: $window-base-color;
 }
 
 @import './highlight.scss';
